Select dropdown arrows fixed on dark mode.

--- a/source/scss/_ndeploy.scss
+++ b/source/scss/_ndeploy.scss
@@ -122,6 +122,9 @@ $carddarkhead:		#32383E !default;
 			border: $border-dark;
 			color: $white;
 		}
+		.custom-select {
+			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='white' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E")
+		}
 	}
 }
 
